--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           alt="imagem-medicina-tecnologica"
           class="imagem-medicina"
         />
-        <p class="paragrafo-medicina-tech">
+        <p class="paragrafo-medicina-tech paragrafo">
           Veja abaixo como a tecnologia está ajudando a saúde
         </p>
       </section>
@@ -44,7 +44,7 @@
           <h2 class="titulo-laboratorio">IA no Laborario</h2>
           <img src="imagens/laboratorio.jpg" alt="imagem-de-laboratorio" /
           class="imagem-laboratorio">
-          <p class="paragrafo-laboratorio">
+          <p class="paragrafo-laboratorio paragrafo">
             A IA é capaz de analisar um grande volume de dados de exames
             anteriores e casos similares, o que ajuda a identificar padrões
             sutis que não seriam possíveis de detectar para os seres humanos.
@@ -62,14 +62,14 @@
           >
         </section>
         <section class="entrevista">
-          <section class="imagem-entrevista">
+          <div class="imagem-entrevista">
             <img
               src="imagens/Mariana-Perroni.jpg"
               alt="imagem-mariana-perroni"
               class="imagem-mariana"
             />
-          </section>
-          <section class="texto-entrevista">
+          </div>
+          <div class="texto-entrevista">
             <h2 class="nome-entrevista">Mariana Perroni</h2>
             <p class="paragrafo-entrevista">
               Mariana Perroni, médica intensivista e clinical lead do Google
@@ -83,7 +83,7 @@
               class="video-entrevista"
               >clique aqui e veja a entrevista</a
             >
-          </section>
+          </div>
         </section>
       </section>
     </main>
